Fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,14 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  font-family: Georgia, serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-.img-flex{
+.img-flex {
   display: block;
   width: 100%;
 }
@@ -26,7 +27,7 @@ a {
   color: currentColor;
 }
 
-.card{
+.card {
   overflow: hidden;
   background-color: #d9ccaa;
   border-radius: 6px;
